sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value inversement
    inversement=false
    ^AlgCocktailSort2:10: error: not found: value inversement
        inversement=true
        ^AlgCocktailSort2:17: error: not found: value inversement
        inversement=true
        ^AlgCocktailSort2:21: error: not found: value inversement
  }while(inversement)
         ^